--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ ipykernel
 langchain_groq
 langchain_openai      
 langchain_google_genai
-
+langchain_community
+pypdf
+faiss-cpu
+structlog
+PyMuPDF
 -e .
