--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,16 @@ langchain
 python-dotenv
 ipykernel
 langchain_groq
-langchain_openai      
 langchain_google_genai
 langchain_community
 pypdf
 faiss-cpu
 structlog
 PyMuPDF
+pandas
+streamlit
+langchain-core[tracing]
+pytest
+streamlit
+docxtxt
 -e .
